--- a/agrohelp/pubspec.yaml
+++ b/agrohelp/pubspec.yaml
@@ -81,17 +81,31 @@ flutter:
           weight: 700
         - asset: assets/fonts/Roboto-Black.ttf
           weight: 900
+
     - family: josefin_sans
       fonts:
-        - asset: assets/fonts/josefin/JosefinSans-light.ttf
+        - asset: assets/fonts/josefin/JosefinSans-Light.ttf
           weight: 300
         - asset: assets/fonts/josefin/JosefinSans-Regular.ttf
           weight: 400
-        - asset: assets/fonts/JosefinSans-Medium.ttf
+        - asset: assets/fonts/josefin/JosefinSans-Medium.ttf
           weight: 500
-        - asset: assets/fonts/JosefinSans-SemiBold.ttf
+        - asset: assets/fonts/josefin/JosefinSans-SemiBold.ttf
           weight: 600
-        - asset: assets/fonts/JosefinSans-Bold.ttf
+        - asset: assets/fonts/josefin/JosefinSans-Bold.ttf
+          weight: 700
+
+    - family: Chakra_Petch
+      fonts:
+        - asset: assets/fonts/Chakra_Petch/ChakraPetch-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Chakra_Petch/ChakraPetch-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Chakra_Petch/ChakraPetch-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Chakra_Petch/ChakraPetch-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Chakra_Petch/ChakraPetch-Bold.ttf
           weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
