--- a/agrohelp/pubspec.yaml
+++ b/agrohelp/pubspec.yaml
@@ -38,9 +38,15 @@ dependencies:
   shared_preferences: ^2.0.17
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.1
+  geolocator: ^9.0.2
+  flutter_map_location_marker: ^6.0.0
+  flutter_compass: ^0.7.0
 
 dev_dependencies:
   flutter_test:
