--- a/agrohelp/pubspec.yaml
+++ b/agrohelp/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   latlong2: ^0.8.1
   geolocator: ^9.0.2
   flutter_map_location_marker: ^6.0.0
+  socket_io: ^1.0.1
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_test:
