--- a/agrohelp/pubspec.yaml
+++ b/agrohelp/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   socket_io: ^1.0.1
   socket_io_client: ^1.0.2
   web_socket_channel: ^2.4.0
+  http: ^0.13.6
+  weather_icons: ^3.0.0
 
 dev_dependencies:
   flutter_test:
